3B - update chat box style - add header status on chat box

--- a/3B-WEB/flash-sale.html
+++ b/3B-WEB/flash-sale.html
@@ -704,7 +704,7 @@
 											<span class="msg-unread">10</span>
 										</div>
 										<div class="messenger">
-											<h3 class="name">Prénom Nom <span class="status">Online 6' ago</span></h3>
+											<h3 class="name">Prénom Nom</h3>
 
 											<h4 class="msg unread">Buzz</h4>
 										</div>
@@ -718,7 +718,7 @@
 											<span class="status green"></span>
 										</div>
 										<div class="messenger">
-											<h3 class="name">Prénom Nom <span class="status">Online now</span></h3>
+											<h3 class="name">Prénom Nom</h3>
 											<h4 class="msg">You: good product</h4>
 										</div>
 										<div class="clearfix"></div>
@@ -731,7 +731,7 @@
 											<span class="status green"></span>
 										</div>
 										<div class="messenger">
-											<h3 class="name">Prénom Nom <span class="status">Online now</span></h3>
+											<h3 class="name">Prénom Nom</h3>
 											<h4 class="msg">You: good product</h4>
 										</div>
 										<div class="clearfix"></div>
@@ -780,13 +780,24 @@
 						</aside>
 
 						<main>
+							<header>
+								<div class="contact">
+									<div class="ava">
+										<img src="assets/images/img30.jpg" class="object-fit">
+									</div>
+									<div class="messenger">
+										<h3 class="name">Prénom Nom <span class="status">Online now</span></h3>
+									</div>
+									<div class="clearfix"></div>
+								</div>
+							</header>
 							<div class="content-chat">
 								<ul class="cus-scroll">
 									<li class="me">
 										<div class="message">
 											Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
 										</div>
-										<div class="clearfix"></div>
+										<span class="time">20:41  2020 - 10 - 10</span>
 									</li>
 									<li class="you">
 										<div class="ava pull-left">
@@ -795,7 +806,7 @@
 										<div class="message">
 											Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
 										</div>
-										<div class="clearfix"></div>
+										<span class="time">20:41  2020 - 10 - 10</span>
 									</li>
 									<li class="you">
 										<div class="ava pull-left">
@@ -804,7 +815,7 @@
 										<div class="message">
 											What're you doing?
 										</div>
-										<div class="clearfix"></div>
+										<span class="time">20:41  2020 - 10 - 10</span>
 									</li>
 									<li class="me">
 										<div class="message">
@@ -821,6 +832,7 @@
 											</div>
 											<div class="clearfix"></div>
 										</div>
+										<span class="time">20:41  2020 - 10 - 10</span>
 									</li>
 									<li class="you">
 										<div class="ava pull-left">
@@ -840,15 +852,13 @@
 											</div>
 											<div class="clearfix"></div>
 										</div>
-									</li>
-									<li class="time">
-										<span>20:41  2020 - 10 - 10</span>
+										<span class="time">20:41  2020 - 10 - 10</span>
 									</li>
 									<li class="me">
 										<div class="message">
 											Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
 										</div>
-										<div class="clearfix"></div>
+										<span class="time">20:41  2020 - 10 - 10</span>
 									</li>
 									<li class="you">
 										<div class="ava pull-left">
@@ -857,7 +867,7 @@
 										<div class="message">
 											Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
 										</div>
-										<div class="clearfix"></div>
+										<span class="time">20:41  2020 - 10 - 10</span>										
 									</li>
 								</ul>
 							</div>
