3B - update add input quanlity in admin-discount-regist-add-product

--- a/3B-NEW/admin-discount-regist-add-product.html
+++ b/3B-NEW/admin-discount-regist-add-product.html
@@ -478,6 +478,15 @@
 													<span class="input-group-addon">%</span>
 												</div>
 											</div>
+											<div class="clearfix"></div>
+											<div class="col-xs-12">
+												<div class="input-group small">
+													<span class="input-group-btn">
+														<button type="button" class="btn btn-green btn-flat">Số lượng</button>
+													</span>
+													<input type="text" class="form-control">
+												</div>
+											</div>
 											<div class="col-xs-12">
 												<label>Thanh lý bộ...</label>
 											</div>
@@ -497,6 +506,15 @@
 												<div class="input-group small">
 													<input type="text" class="form-control" placeholder="20">
 													<span class="input-group-addon">%</span>
+												</div>
+											</div>
+											<div class="clearfix"></div>
+											<div class="col-xs-12">
+												<div class="input-group small">
+													<span class="input-group-btn">
+														<button type="button" class="btn btn-green btn-flat">Số lượng</button>
+													</span>
+													<input type="text" class="form-control">
 												</div>
 											</div>
 											<div class="col-xs-12">
@@ -520,6 +538,15 @@
 													<span class="input-group-addon">%</span>
 												</div>
 											</div>
+											<div class="clearfix"></div>
+											<div class="col-xs-12">
+												<div class="input-group small">
+													<span class="input-group-btn">
+														<button type="button" class="btn btn-green btn-flat">Số lượng</button>
+													</span>
+													<input type="text" class="form-control">
+												</div>
+											</div>
 											<div class="col-xs-12">
 												<label>Thanh lý bộ...</label>
 											</div>
@@ -539,6 +566,15 @@
 												<div class="input-group small">
 													<input type="text" class="form-control" placeholder="20">
 													<span class="input-group-addon">%</span>
+												</div>
+											</div>
+											<div class="clearfix"></div>
+											<div class="col-xs-12">
+												<div class="input-group small">
+													<span class="input-group-btn">
+														<button type="button" class="btn btn-green btn-flat">Số lượng</button>
+													</span>
+													<input type="text" class="form-control">
 												</div>
 											</div>
 											<div class="col-xs-12">
@@ -562,6 +598,15 @@
 													<span class="input-group-addon">%</span>
 												</div>
 											</div>
+											<div class="clearfix"></div>
+											<div class="col-xs-12">
+												<div class="input-group small">
+													<span class="input-group-btn">
+														<button type="button" class="btn btn-green btn-flat">Số lượng</button>
+													</span>
+													<input type="text" class="form-control">
+												</div>
+											</div>
 											<div class="col-xs-12">
 												<label>Thanh lý bộ...</label>
 											</div>
@@ -583,6 +628,15 @@
 													<span class="input-group-addon">%</span>
 												</div>
 											</div>
+											<div class="clearfix"></div>
+											<div class="col-xs-12">
+												<div class="input-group small">
+													<span class="input-group-btn">
+														<button type="button" class="btn btn-green btn-flat">Số lượng</button>
+													</span>
+													<input type="text" class="form-control">
+												</div>
+											</div>
 											<div class="col-xs-12">
 												<label>Thanh lý bộ...</label>
 											</div>
@@ -602,6 +656,15 @@
 												<div class="input-group small">
 													<input type="text" class="form-control" placeholder="20">
 													<span class="input-group-addon">%</span>
+												</div>
+											</div>
+											<div class="clearfix"></div>
+											<div class="col-xs-12">
+												<div class="input-group small">
+													<span class="input-group-btn">
+														<button type="button" class="btn btn-green btn-flat">Số lượng</button>
+													</span>
+													<input type="text" class="form-control">
 												</div>
 											</div>
 											<div class="col-xs-12">
