3B - update style reponsive

--- a/3B-WEB/flash-sale.html
+++ b/3B-WEB/flash-sale.html
@@ -306,16 +306,38 @@
 									<a href="#tab_1" data-toggle="tab" aria-expanded="true">All</a>
 								</li>
 								<li>
-									<a href="#tab_2" data-toggle="tab" aria-expanded="false">Sale 30%</a>
+									<a href="#tab_2" data-toggle="tab" aria-expanded="false">Khuyến mãi 30%</a>
 								</li>
 								<li>
-									<a href="#tab_3" data-toggle="tab" aria-expanded="false">Sale 50%</a>
+									<a href="#tab_3" data-toggle="tab" aria-expanded="false">Khuyến mãi 50%</a>
+								</li>
+								<li>
+									<a href="#tab_2" data-toggle="tab" aria-expanded="false">Khuyến mãi 70%</a>
+								</li>
+								<li>
+									<a href="#tab_3" data-toggle="tab" aria-expanded="false">Khuyến mãi 90%</a>
 								</li>
 								<li>
 									<a href="#tab_4" data-toggle="tab" aria-expanded="false">From 29k</a>
 								</li>
 								<li>
-									<a href="#tab_5" data-toggle="tab" aria-expanded="false">Only 9k</a>
+									<a aria-expanded="false">Xem thêm <i class="fa fa-angle-down"></i></a>
+									<div class="menu-sub">
+										<ul class="sub-items">
+											<li><a href="#">Khuyến mãi 90%</a></li>
+											<li><a href="#">Khuyến mãi 100%</a></li>
+											<li><a href="#">From 29k</a></li>
+											<li><a href="#">From 50k</a></li>
+											<li><a href="#">From 60k</a></li>
+										</ul>
+										<ul class="sub-items">
+											<li><a href="#">Khuyến mãi 90%</a></li>
+											<li><a href="#">Khuyến mãi 100%</a></li>
+											<li><a href="#">Khuyến mãi 200%</a></li>
+											<li><a href="#">From 5000k</a></li>
+											<li><a href="#">From 60000k</a></li>
+										</ul>
+									</div>
 								</li>
 							</ul>
 							<div class="tab-content">
