3B - update style mobile for homepage - recommend section

--- a/3B-WEB/home.html
+++ b/3B-WEB/home.html
@@ -700,7 +700,7 @@
 					<!-- BEGIN ADS -->
 					<div class="ads margin-b50">
 						<div class="row">
-							<div class="col-md-3 custom-pad-right">
+							<div class="col-md-3 col-sm-4">
 								<div class="ad">
 									<div class="info">
 										<h5>Custom Wheels<br>Systems<br>New Technology</h5>
@@ -708,12 +708,12 @@
 									<img src="assets/images/img18.png">
 								</div>
 							</div>
-							<div class="col-md-6">
+							<div class="col-md-6 col-sm-4">
 								<div class="ad">
 									<img src="assets/images/img20.png">
 								</div>
 							</div>
-							<div class="col-md-3 custom-pad-left">
+							<div class="col-md-3 col-sm-4">
 								<div class="ad">
 									<div class="info">
 										<span>Popular 2019</span>
@@ -794,7 +794,7 @@
 					<div class="nav-tabs-custom margin-b50">
 						<h4>Recommened for You</h4>
 
-						<ul class="nav nav-tabs">
+						<ul class="nav nav-tabs nav-tabs-view-mobile">
 							<li class="active">
 								<a href="#tab_1" data-toggle="tab" aria-expanded="true">All</a>
 							</li>
@@ -818,7 +818,7 @@
 							<!-- BEGIN TAB -->
 							<div class="tab-pane active" id="tab_1">
 								<div class="row">
-									<div class="col-md-2">
+									<div class="col-md-2 col-sm-4 col-xs-6">
 										<!-- PRODUCT ITEM -->
 										<div class="product-item">
 											<a href="#">
@@ -839,7 +839,7 @@
 										</div>
 										<!-- /END PRODUCT ITEM -->
 									</div>
-									<div class="col-md-2">
+									<div class="col-md-2 col-sm-4 col-xs-6">
 										<!-- PRODUCT ITEM -->
 										<div class="product-item">
 											<a href="#">
@@ -860,7 +860,7 @@
 										</div>
 										<!-- /END PRODUCT ITEM -->
 									</div>
-									<div class="col-md-2">
+									<div class="col-md-2 col-sm-4 col-xs-6">
 										<!-- PRODUCT ITEM -->
 										<div class="product-item">
 											<a href="#">
@@ -881,7 +881,7 @@
 										</div>
 										<!-- /END PRODUCT ITEM -->
 									</div>
-									<div class="col-md-2">
+									<div class="col-md-2 col-sm-4 col-xs-6">
 										<!-- PRODUCT ITEM -->
 										<div class="product-item">
 											<a href="#">
@@ -902,7 +902,7 @@
 										</div>
 										<!-- /END PRODUCT ITEM -->
 									</div>
-									<div class="col-md-2">
+									<div class="col-md-2 col-sm-4 col-xs-6">
 										<!-- PRODUCT ITEM -->
 										<div class="product-item">
 											<a href="#">
@@ -923,7 +923,7 @@
 										</div>
 										<!-- /END PRODUCT ITEM -->
 									</div>
-									<div class="col-md-2">
+									<div class="col-md-2 col-sm-4 col-xs-6">
 										<!-- PRODUCT ITEM -->
 										<div class="product-item">
 											<a href="#">
@@ -944,7 +944,7 @@
 										</div>
 										<!-- /END PRODUCT ITEM -->
 									</div>
-									<div class="col-md-2">
+									<div class="col-md-2 col-sm-4 col-xs-6">
 										<!-- PRODUCT ITEM -->
 										<div class="product-item">
 											<a href="#">
@@ -965,7 +965,7 @@
 										</div>
 										<!-- /END PRODUCT ITEM -->
 									</div>
-									<div class="col-md-2">
+									<div class="col-md-2 col-sm-4 col-xs-6">
 										<!-- PRODUCT ITEM -->
 										<div class="product-item">
 											<a href="#">
@@ -998,7 +998,7 @@
 							<!-- BEGIN TAB -->
 							<div class="tab-pane" id="tab_2">
 								<div class="row">
-									<div class="col-md-2">
+									<div class="col-md-2 col-sm-4 col-xs-6">
 										<!-- PRODUCT ITEM -->
 										<div class="product-item">
 											<a href="#">
@@ -1019,7 +1019,7 @@
 										</div>
 										<!-- /END PRODUCT ITEM -->
 									</div>
-									<div class="col-md-2">
+									<div class="col-md-2 col-sm-4 col-xs-6">
 										<!-- PRODUCT ITEM -->
 										<div class="product-item">
 											<a href="#">
@@ -1040,7 +1040,7 @@
 										</div>
 										<!-- /END PRODUCT ITEM -->
 									</div>
-									<div class="col-md-2">
+									<div class="col-md-2 col-sm-4 col-xs-6">
 										<!-- PRODUCT ITEM -->
 										<div class="product-item">
 											<a href="#">
@@ -1061,7 +1061,7 @@
 										</div>
 										<!-- /END PRODUCT ITEM -->
 									</div>
-									<div class="col-md-2">
+									<div class="col-md-2 col-sm-4 col-xs-6">
 										<!-- PRODUCT ITEM -->
 										<div class="product-item">
 											<a href="#">
@@ -1082,7 +1082,7 @@
 										</div>
 										<!-- /END PRODUCT ITEM -->
 									</div>
-									<div class="col-md-2">
+									<div class="col-md-2 col-sm-4 col-xs-6">
 										<!-- PRODUCT ITEM -->
 										<div class="product-item">
 											<a href="#">
@@ -1103,7 +1103,7 @@
 										</div>
 										<!-- /END PRODUCT ITEM -->
 									</div>
-									<div class="col-md-2">
+									<div class="col-md-2 col-sm-4 col-xs-6">
 										<!-- PRODUCT ITEM -->
 										<div class="product-item">
 											<a href="#">
