3B - update style flash sale title on mobile

--- a/3B-WEB/home.html
+++ b/3B-WEB/home.html
@@ -517,7 +517,7 @@
 				<div class="col-md-12">
 					<div class="head-title flash-title">
 						<h3>Fla<span><img src="assets/images/svg/flash.svg"></span>h Sale</h3>
-						<span class="flash-time">
+						<span class="flash-time">Bắt đầu sau:
 							<span class="hour">12</span> : 
 							<span class="minute">46</span> : 
 							<span class="second">34</span>
