3B - update menu home

--- a/3B-WEB/home.html
+++ b/3B-WEB/home.html
@@ -263,13 +263,18 @@
 
 				<div class="col-md-12">
 					<ul class="menu-container">
-						<li class="icon"><a href="view-all-categories.html"><img src="assets/images/svg/menu-bar.svg"></a></li>
+						<li class="icon">
+							<a href="view-all-categories.html">
+								<span class="text-on-mobile">Xem tất cả danh mục</span>
+								<img src="assets/images/svg/menu-bar.svg">
+							</a>
+						</li>
 						<li>
-							<a href="view-product-by-category.html"><span class="custom-wrap-1line">Electronic Devices</span> <i class="fa fa-angle-down"></i></a>
+							<a href="view-product-by-category.html"><span class="custom-wrap-1line">Electronic Devices<i class="fa fa-angle-down"></i></span></a>
 							<div class="menu-sub">
 								<div class="sub-row">
 									<ul class="sub-items">
-										<li class="title"><span class="custom-wrap-1line">test add thêm level 3 sau khi đã có sản phẩm ở level 2, đặt 1 cái tên thật là dài là dài để xem a Hùng hiên thị ra làm sao nào :vtest add thêm level 3 sau khi đã có sản phẩm ở level 2, đặt 1 cái tên thật là dài là dài để xem a Hùng hiên thị ra làm sao nào</span> <i class="fa fa-caret-right"></i></li>
+										<li class="title"><span class="custom-wrap-1line">test add thêm level 3 sau khi đã có sản phẩm ở level 2, đặt 1 cái tên thật là dài là dài để xem a Hùng hiên thị ra làm sao nào :vtest add thêm level 3 sau khi đã có sản phẩm ở level 2, đặt 1 cái tên thật là dài là dài để xem a Hùng hiên thị ra làm sao nào</span></li>
 										<li><a href="view-product-by-category.html"><span class="custom-wrap-1line">test add thêm level 3 sau khi đã có sản phẩm ở level 2, đặt 1 cái tên thật là dài là dài để xem a Hùng hiên thị ra làm sao nào :vtest add thêm level 3 sau khi đã có sản phẩm ở level 2, đặt 1 cái tên thật là dài là dài để xem a Hùng hiên thị ra làm sao nào</span></a></li>
 										<li><a href="view-product-by-category.html">Fomal shoes</a></li>
 										<li><a href="view-product-by-category.html">Sadals & Floaters</a></li>
@@ -277,7 +282,7 @@
 										<li><a href="#">Sadals & Floaters </a></li>
 									</ul>
 									<ul class="sub-items">
-										<li class="title">Footwear <i class="fa fa-caret-right"></i></li>
+										<li class="title">Footwear</li>
 										<li><a href="#">Sport shoes</a></li>
 										<li><a href="#">Fomal shoes</a></li>
 										<li><a href="#">Sadals & Floaters</a></li>
@@ -285,7 +290,7 @@
 										<li><a href="#">Sadals & Floaters </a></li>
 									</ul>
 									<ul class="sub-items">
-										<li class="title">Men grooming <i class="fa fa-caret-right"></i></li>
+										<li class="title">Men grooming</li>
 										<li><a href="#">Sport shoes</a></li>
 										<li><a href="#">Fomal shoes</a></li>
 										<li><a href="#">Sadals & Floaters</a></li>
@@ -293,7 +298,7 @@
 										<li><a href="#">Sadals & Floaters </a></li>
 									</ul>
 									<ul class="sub-items">
-										<li class="title">Footwear <i class="fa fa-caret-right"></i></li>
+										<li class="title">Footwear</li>
 										<li><a href="#">Sport shoes</a></li>
 										<li><a href="#">Fomal shoes</a></li>
 										<li><a href="#">Sadals & Floaters</a></li>
@@ -301,7 +306,7 @@
 										<li><a href="#">Sadals & Floaters </a></li>
 									</ul>
 									<ul class="sub-items">
-										<li class="title">Men grooming <i class="fa fa-caret-right"></i></li>
+										<li class="title">Men grooming</li>
 										<li><a href="#">Sport shoes</a></li>
 										<li><a href="#">Fomal shoes</a></li>
 										<li><a href="#">Sadals & Floaters</a></li>
@@ -311,7 +316,7 @@
 								</div>
 								<div class="sub-row row2">
 									<ul class="sub-items">
-										<li class="title">Footwear <i class="fa fa-caret-right"></i></li>
+										<li class="title">Footwear</li>
 										<li><a href="#">Sport shoes</a></li>
 										<li><a href="#">Fomal shoes</a></li>
 										<li><a href="#">Sadals & Floaters</a></li>
@@ -319,7 +324,7 @@
 										<li><a href="#">Sadals & Floaters </a></li>
 									</ul>
 									<ul class="sub-items">
-										<li class="title">Footwear <i class="fa fa-caret-right"></i></li>
+										<li class="title">Footwear</li>
 										<li><a href="#">Sport shoes</a></li>
 										<li><a href="#">Fomal shoes</a></li>
 										<li><a href="#">Sadals & Floaters</a></li>
@@ -327,7 +332,7 @@
 										<li><a href="#">Sadals & Floaters </a></li>
 									</ul>
 									<ul class="sub-items">
-										<li class="title">Men grooming <i class="fa fa-caret-right"></i></li>
+										<li class="title">Men grooming</li>
 										<li><a href="#">Sport shoes</a></li>
 										<li><a href="#">Fomal shoes</a></li>
 										<li><a href="#">Sadals & Floaters</a></li>
@@ -335,7 +340,7 @@
 										<li><a href="#">Sadals & Floaters </a></li>
 									</ul>
 									<ul class="sub-items">
-										<li class="title">Footwear <i class="fa fa-caret-right"></i></li>
+										<li class="title">Footwear</li>
 										<li><a href="#">Sport shoes</a></li>
 										<li><a href="#">Fomal shoes</a></li>
 										<li><a href="#">Sadals & Floaters</a></li>
@@ -343,7 +348,7 @@
 										<li><a href="#">Sadals & Floaters </a></li>
 									</ul>
 									<ul class="sub-items">
-										<li class="title">Footwear <i class="fa fa-caret-right"></i></li>
+										<li class="title">Footwear</li>
 										<li><a href="#">Sport shoes</a></li>
 										<li><a href="#">Fomal shoes</a></li>
 										<li><a href="#">Sadals & Floaters</a></li>
@@ -353,15 +358,15 @@
 								</div>
 							</div>
 						</li>
-						<li><a href="#"><span class="custom-wrap-1line">TV & Appiliantion</span> <i class="fa fa-angle-down"></i></a></li>
+						<li><a href="#"><span class="custom-wrap-1line">TV & Appiliantion <i class="fa fa-angle-down"></i></span></a></li>
 						<li>
 							<a href="#">
-								<span class="custom-wrap-1line">test add thêm level 3 sau khi đã có sản phẩm ở level 2, đặt 1 cái tên thật là dài là dài để xem a Hùng hiên thị ra làm sao nào :vtest add thêm level 3 sau khi đã có sản phẩm ở level 2, đặt 1 cái tên thật là dài là dài để xem a Hùng hiên thị ra làm sao nào</span> <i class="fa fa-angle-down"></i>
+								<span class="custom-wrap-1line">test add thêm <i class="fa fa-angle-down"></i></span> 
 							</a>
 							<div class="menu-sub">
 								<div class="sub-row">
 									<ul class="sub-items">
-										<li class="title"><span class="custom-wrap-1line">test add thêm level 3 sau khi đã có sản phẩm ở level 2, đặt 1 cái tên thật là dài là dài để xem a Hùng hiên thị ra làm sao nào :vtest add thêm level 3 sau khi đã có sản phẩm ở level 2, đặt 1 cái tên thật là dài là dài để xem a Hùng hiên thị ra làm sao nào</span> <i class="fa fa-caret-right"></i></li>
+										<li class="title"><span class="custom-wrap-1line">test add thêm level 3 sau khi đã có sản phẩm ở level 2, đặt 1 cái tên thật là dài là dài để xem a Hùng hiên thị ra làm sao nào :vtest add thêm level 3 sau khi đã có sản phẩm ở level 2, đặt 1 cái tên thật là dài là dài để xem a Hùng hiên thị ra làm sao nào</span></li>
 										<li><a href="view-product-by-category.html"><span class="custom-wrap-1line">test add thêm level 3 sau khi đã có sản phẩm ở level 2, đặt 1 cái tên thật là dài là dài để xem a Hùng hiên thị ra làm sao nào :vtest add thêm level 3 sau khi đã có sản phẩm ở level 2, đặt 1 cái tên thật là dài là dài để xem a Hùng hiên thị ra làm sao nào</span></a></li>
 										<li><a href="view-product-by-category.html">Fomal shoes</a></li>
 										<li><a href="view-product-by-category.html">Sadals & Floaters</a></li>
@@ -369,7 +374,7 @@
 										<li><a href="#">Sadals & Floaters </a></li>
 									</ul>
 									<ul class="sub-items">
-										<li class="title">Footwear <i class="fa fa-caret-right"></i></li>
+										<li class="title">Footwear</li>
 										<li><a href="#">Sport shoes</a></li>
 										<li><a href="#">Fomal shoes</a></li>
 										<li><a href="#">Sadals & Floaters</a></li>
@@ -377,7 +382,7 @@
 										<li><a href="#">Sadals & Floaters </a></li>
 									</ul>
 									<ul class="sub-items">
-										<li class="title">Men grooming <i class="fa fa-caret-right"></i></li>
+										<li class="title">Men grooming</li>
 										<li><a href="#">Sport shoes</a></li>
 										<li><a href="#">Fomal shoes</a></li>
 										<li><a href="#">Sadals & Floaters</a></li>
@@ -385,7 +390,7 @@
 										<li><a href="#">Sadals & Floaters </a></li>
 									</ul>
 									<ul class="sub-items">
-										<li class="title">Footwear <i class="fa fa-caret-right"></i></li>
+										<li class="title">Footwear</li>
 										<li><a href="#">Sport shoes</a></li>
 										<li><a href="#">Fomal shoes</a></li>
 										<li><a href="#">Sadals & Floaters</a></li>
@@ -393,7 +398,7 @@
 										<li><a href="#">Sadals & Floaters </a></li>
 									</ul>
 									<ul class="sub-items">
-										<li class="title">Men grooming <i class="fa fa-caret-right"></i></li>
+										<li class="title">Men grooming</li>
 										<li><a href="#">Sport shoes</a></li>
 										<li><a href="#">Fomal shoes</a></li>
 										<li><a href="#">Sadals & Floaters</a></li>
@@ -403,7 +408,7 @@
 								</div>
 								<div class="sub-row row2">
 									<ul class="sub-items">
-										<li class="title">Footwear <i class="fa fa-caret-right"></i></li>
+										<li class="title">Footwear</li>
 										<li><a href="#">Sport shoes</a></li>
 										<li><a href="#">Fomal shoes</a></li>
 										<li><a href="#">Sadals & Floaters</a></li>
@@ -411,7 +416,7 @@
 										<li><a href="#">Sadals & Floaters </a></li>
 									</ul>
 									<ul class="sub-items">
-										<li class="title">Footwear <i class="fa fa-caret-right"></i></li>
+										<li class="title">Footwear</li>
 										<li><a href="#">Sport shoes</a></li>
 										<li><a href="#">Fomal shoes</a></li>
 										<li><a href="#">Sadals & Floaters</a></li>
@@ -419,7 +424,7 @@
 										<li><a href="#">Sadals & Floaters </a></li>
 									</ul>
 									<ul class="sub-items">
-										<li class="title">Men grooming <i class="fa fa-caret-right"></i></li>
+										<li class="title">Men grooming</li>
 										<li><a href="#">Sport shoes</a></li>
 										<li><a href="#">Fomal shoes</a></li>
 										<li><a href="#">Sadals & Floaters</a></li>
@@ -427,7 +432,7 @@
 										<li><a href="#">Sadals & Floaters </a></li>
 									</ul>
 									<ul class="sub-items">
-										<li class="title">Footwear <i class="fa fa-caret-right"></i></li>
+										<li class="title">Footwear</li>
 										<li><a href="#">Sport shoes</a></li>
 										<li><a href="#">Fomal shoes</a></li>
 										<li><a href="#">Sadals & Floaters</a></li>
@@ -435,7 +440,7 @@
 										<li><a href="#">Sadals & Floaters </a></li>
 									</ul>
 									<ul class="sub-items">
-										<li class="title">Footwear <i class="fa fa-caret-right"></i></li>
+										<li class="title">Footwear></li>
 										<li><a href="#">Sport shoes</a></li>
 										<li><a href="#">Fomal shoes</a></li>
 										<li><a href="#">Sadals & Floaters</a></li>
@@ -445,9 +450,9 @@
 								</div>
 							</div>
 						</li>
-						<li><a href="#"><span class="custom-wrap-1line">Women</span> <i class="fa fa-angle-down"></i></a></li>
-						<li><a href="#"><span class="custom-wrap-1line">Baby & Kids</span> <i class="fa fa-angle-down"></i></a></li>
-						<li><a href="#"><span class="custom-wrap-1line">Home & Funiture</span> <i class="fa fa-angle-down"></i></a></li>
+						<li><a href="#"><span class="custom-wrap-1line">Women <i class="fa fa-angle-down"></i></span></a></li>
+						<li><a href="#"><span class="custom-wrap-1line">Baby & Kids <i class="fa fa-angle-down"></i></span></a></li>
+						<li><a href="#"><span class="custom-wrap-1line">Home & Funiture <i class="fa fa-angle-down"></i></span></a></li>
 					</ul>
 				</div>
 				<div class="clearfix"></div>
