3B - fix button discount-regist-add-product

--- a/3B-NEW/admin-discount-regist-add-product.html
+++ b/3B-NEW/admin-discount-regist-add-product.html
@@ -639,13 +639,12 @@
 												<div class="clearfix"></div>
 											</div>
 											
-											<div class="flash-sale-amount">
+											<div class="flash-sale-amount has-attribute">
 												<div class="form-group">
 													<div class="input-group small">
 														<span class="input-group-btn">
 															<span class="btn">Số lượng</span>
 														</span>
-														<input type="number" class="form-control" name="quantity" min="1" max="5">
 														<span class="input-group-btn">
 															<button type="button" class="btn btn-flat btn-default" data-toggle="modal" data-target="#saveFlashSaleAmount"><i class="fa fa-plus"></i></button>
 														</span>
@@ -679,13 +678,13 @@
 												<div class="clearfix"></div>
 											</div>
 											
-											<div class="flash-sale-amount">
+											<div class="flash-sale-amount has-attribute">
 												<div class="form-group">
 													<div class="input-group small">
 														<span class="input-group-btn">
 															<span class="btn">Số lượng</span>
 														</span>
-														<input type="number" class="form-control" name="quantity" min="1" max="5">
+														<!-- <input type="number" class="form-control" name="quantity" min="1" max="5"> -->
 														<span class="input-group-btn">
 															<button type="button" class="btn btn-flat btn-default" data-toggle="modal" data-target="#saveFlashSaleAmount"><i class="fa fa-plus"></i></button>
 														</span>
